feat: Add Rolling Restart Chaos Type
